# MFC-project-in-SEU

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/: copilot-instructions.md
docs/: 2026-03-24_action-plan.md  2026-03-24_architecture-component-diagram.mmd  2026-03-24_architecture-summary-draft.md  2026-03-24_documentation_gap.md  2026-03-24_gap-register.md  2026-03-25_Date_Conversion-tests.md  2026-03-25_coverage-complexity-table-01.md  2026-03-25_coverage-complexity-table-02.md  2026-03-25_coverage-complexity-table-03.md  2026-03-25_coverage-complexity-table.md  2026-03-25_googletest-setup-plan.md  SBOM.md  code-analysis.md  remediation-backlog.md  sbom-risk-analysis.md
scr/: Calculate_atom.sln  Calculate_atom.vcxproj  Calculate_atom.vcxproj.filters  Date_Conversion.cpp  Date_Conversion.h  Matrix_Cal.cpp
scr/DateConversionCore/: DateConversionCore.cpp  DateConversionCore.h  DateConversionCore.vcxproj  DateConversionCore.vcxproj.filters
scr/MatrixCore/: MatrixCore.cpp  MatrixCore.h
tests/Calculate_atom.Tests/: Calculate_atom.Tests.vcxproj  Calculate_atom.Tests.vcxproj.filters  DateConversionCoreTests.cpp  MatrixCoreTests.cpp
